--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -13,6 +13,17 @@ h1 {
   color: #333;
 }
 
+h2 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  color: #023047;
+}
+
+p {
+  font-weight: 500;
+  color: #e9e9e9;
+}
+
 a {
   color: #333; /*dark grey for links*/
   text-decoration: none;
