--- a/vite-project/src/styles.css
+++ b/vite-project/src/styles.css
@@ -10,17 +10,17 @@ body {
 h1 {
   font-family: "Poppins", sans-serif;
   font-weight: 600;
-  color: #333;
+  /* color: #333; */
 }
 
 h2 {
   font-family: "Poppins", sans-serif;
   font-weight: 600;
-  color: #333;
+  /* color: #333; */
 }
 
 p {
-  color: #333;
+  /* color: #333; */
 }
 
 a {
