--- a/vite-project/src/styles.css
+++ b/vite-project/src/styles.css
@@ -64,7 +64,7 @@ a:hover {
 }
 
 .hero-overlay {
-  @apply absolute inset-0 bg-black/40 rounded-lg;
+  @apply absolute inset-0 bg-neutral-900/40 rounded-lg;
 }
 
 .hero-text {
@@ -152,7 +152,7 @@ a:hover {
   @apply text-sm leading-relaxed opacity-90 tracking-normal;
 }
 .project-card {
-  @apply rounded-lg p-4 bg-white cursor-pointer transform transition-transform duration-300 ease-in-out;
+  @apply rounded-lg p-4 bg-white cursor-pointer transform transition-transform duration-300 ease-in-out h-[200px] ;
 }
 .project-card:hover {
   transform: scale(1.03) rotate(-0.8deg);
