seabody UI edited to match other projects

--- a/vite-project/src/components/BackButton.css
+++ b/vite-project/src/components/BackButton.css
@@ -1,4 +1,4 @@
-/* BackButton.css */
+/* BackButton.css
 
 .back-button {
   margin: 1rem;
@@ -15,4 +15,4 @@
 
 .back-button:hover {
   transform: scale(1.5);
-}
+} */
